--- a/style/main.css
+++ b/style/main.css
@@ -1370,7 +1370,18 @@ i {
     margin-right: 0px;
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 414px) {
+  .resul-wrap {
+    width: 100%;
+  }
+  .total-result-wrap {
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .main-order-button {
+    width: 100%;
+  }
   .frame-glass-wrap {
     margin-left: 0px;
   }
